<resources>
    <string name="app_name">imenú</string>
    <string name="registro_titulo">Crea tu usuario</string>
    <string name="usuario">Usuario</string>
    <string name="hint_usuario">Nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="hint_contraseña">Ingresa tu contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="imagen_usuario">Imagen del usuario</string>
    <string name="agregar_plato">Agregar Plato</string>
    <string-array name="estados_orden">
        <item>PENDIENTE</item>
        <item>EN_PROCESO</item>
        <item>COMPLETADA</item>
        <item>EN_PREPARACION</item>
        <item>CANCELADA</item>
    </string-array>
</resources>